--- a/Frontend/petshop_front/src/App.css
+++ b/Frontend/petshop_front/src/App.css
@@ -21,78 +21,43 @@
     rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 
-.container .header h1 {
+.container .header h1{
+  font-size: 0.8rem;
+  color: #f6f6f6;
+  font-weight: bold;
+  text-align: left;
+  margin-right: 12px;
   margin-top: 20px;
   margin-left: 8px;
-  color: #fef6f6;
+  letter-spacing: 1px;
+  font-family: "Montserrat", sans-serif;
 }
 
 .container .header img {
-  margin-left: 284px;
+  margin-left: 228px;
   border-radius: 12px;
   margin-top: 8px;
   margin-bottom: 8px;
-}
-
-.container .text {
-  display: flex;
-  justify-content: left;
-  align-items: left;
-  flex-direction: row;
-  margin-top: 36px;
-  margin-left: 284px;
-}
-
-.container .text img {
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
-    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 
 .container .body {
   height: 100vh;
   width: 100vw;
   display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: row;
-  margin-right: 36px;
+  margin-left: 228px;
 }
 
-.body ul li {
-  margin-bottom: 16px;
-  color: #fef6f6;
-  text-align: left;
-  color: #555555;
+.container .body .text {
+  display: flex;
+  justify-content: left;
+  align-items: left;
+  flex-direction: column;
+  margin-bottom: 36px;
 }
 
-.container form {
-  padding: 24px 24px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
-    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-  border-radius: 12px;
-  background-color: #f6f6f6;
-  color: #555555;
-}
-
-h1 {
-  font-size: 0.8rem;
-  color: #333;
-  font-weight: bold;
-  text-align: left;
-  margin-right: 12px;
-  letter-spacing: 1px;
-  font-family: "Montserrat", sans-serif;
-}
-
-.container .body .options h2 {
-  font-size: 1.8rem;
-  text-decoration: underline;
-  margin-bottom: 20px;
-  text-align: left;
-  color: #555555;
-}
-
-p {
+.container .body .text h1 {
+  margin-top: 64px;
   font-size: 2.9rem;
   line-height: 1.2;
   text-align: left;
@@ -100,4 +65,31 @@ p {
   color: #555555;
   font-family: "Open Sans", sans-serif;
   font-weight: bold;
+}
+
+.container .body .text h2 {
+  font-size: 1.8rem;
+  text-decoration: underline;
+  margin-bottom: 20px;
+  text-align: left;
+  color: #555555;
+}
+
+.container .body .text ul li {
+  margin-bottom: 16px;
+  text-align: left;
+  color: #555555;
+}
+
+.container .body form {
+  width: 350px;
+  padding: 24px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  border-radius: 12px;
+  background-color: #f6f6f6;
+  color: #555555;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: 64px;
 }
